--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-    height: 5rem;
+    background: rgb(7, 15, 43);
+    height: 6rem;
     width: 100vw;
     max-width: 75rem;
     margin :0 auto;
@@ -13,9 +14,9 @@
 
 .logo {
     object-fit: cover;
-    height: 5rem;
-    width: 12rem;
-    margin-left: 1rem;
+    height: 3.5rem;
+    width: 8rem;
+    margin-left: 0;
 }
 
 .desktopMenuListItem{
