--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,9 @@ body {
     overflow: hidden;
     overflow-y: scroll;
 }
+
+@media screen and (max-width:720px) {
+    .skillBarText>p {
+        font-size: 2vw;
+    }
+}
