--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -1,6 +1,6 @@
 #intro {
     background: rgb(7, 15, 43);
-    height: calc(100vh - 4rem);
+    height: calc(100vh - 6rem);
     width: 100vw;
     max-width: 75rem;
     margin: 0 auto;
@@ -51,6 +51,7 @@
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 2rem;
+    cursor: pointer;
 }
 
 .btnImg {
