--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -16,7 +16,7 @@
     object-fit: cover;
     height: 3.5rem;
     width: 8rem;
-    margin-left: 0;
+    cursor: pointer;
 }
 
 .desktopMenuListItem{
@@ -41,6 +41,8 @@
     border-radius: 2rem;
     height: 2rem;
     transition: background 0.3s ease;
+    margin-right: 3;
+    cursor: pointer;
 }
 
 .desktopMenuImg{
@@ -105,5 +107,24 @@
         border-radius: 2rem;
         height: 2rem;
         font-size: 0.6rem;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .desktopMenuListItem{
+        margin: 0.2rem;
+        font-size: 0.5rem;
+    }
+
+    .logo {
+        height: 2.3rem;
+        width: 5.8rem;
+    }
+
+    .desktopMenuBtn{
+        padding: 0 1.3rem;
+        border-radius: 2rem;
+        height: 2rem;
+        font-size: 0.5rem;
     }
 }
