--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -65,6 +65,9 @@
     .skillTitle {
         font-size: 2.5rem;
     }
+    .skillDesc {
+        font-size: 0.9rem;
+    }
 }
 
 @media screen and (max-width:640px) {
@@ -79,10 +82,10 @@
         font-size: 2rem;
     }
     .skillBars {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
     .skillDesc {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
     .skillBar {
         height: 7rem;
