--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -128,3 +128,52 @@
         font-size: 0.5rem;
     }
 }
+
+.active {
+    color: rgb(255, 79, 243);
+    padding-bottom: 0.5rem;
+    border-bottom: 3px solid rgb(255, 79, 243);
+}
+
+.mobMenu {
+    display: none;
+    object-fit: cover;
+    height: 1.8rem;
+}
+
+.navMenu {
+    position: absolute;
+    top: 4rem;
+    right: 2rem;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    height: fit-content;
+    min-width: 15rem;
+    background: rgb(7, 15, 43);
+    border-radius: 1rem;
+}
+
+.listItem {
+    color: white;
+    padding: 0.5rem 3rem;
+    margin: 0.25rem;
+    background: rgb(3, 12, 40);
+}
+
+@media screen and (max-width:720px) {
+    .mobMenu {
+        display: flex;
+    }
+
+    .desktopMenu {
+        display: none;
+    }
+
+    .desktopMenuBtn {
+        display: none;
+    }
+
+    
+}
